2008-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c(gen_tics) src/set.c(set_tics) src/show.c
	src/graphics.c (plot_border) demo/random.dem:
	Add an axis tic attribute "rangelimited".  If set, the border and
	tics for this axis will be drawn only for the range of the data,
	rather than for the full range of the axis.

2008-09-22  Ethan Merritt  <merritt@u.washington.edu>

	Version 4.2.4 release

	* configure.in PATCHLEVEL docs/titlepag.tex src/version.c:
	Update for 4.2.4 release

2008-09-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): Add a sanity check for the number of auto-
	generated axis ticks.  Do not accept a request for more ticks than the
	resolution of the output device coordinate system (term->xmax).
	Bug #2117370

2008-09-21  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/gnuplot.texi: Update for 4.2.4 release.

2008-09-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm:  Add support for enhanced text mode.

2008-09-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_labels3d):  Clip "splot with labels" against
	plot boundaries in "set view map" mode, for consistency with 2D plots.

2008-09-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Force update of cursor position after
	every polyline.
	Bugfix

2008-09-06  Juergen Wieferink <wieferink@freenet.de>

	* src/term.c (enhanced_recursion):  Add curly braces {} to the list of
	characters that must be escaped in postscript enhanced mode.
	Bug #1968636

2008-09-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (add_tic_user): NULL labels are OK if requested via
	'set xtics (x1, x2, ...)' as opposed to read from a data file.

2008-09-02  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c src/gp_time.h src/internal.c (f_strftime f_strptime)
	src/internal.h demo/stringvar.dem docs/gnuplot.doc:
	Introduce two new functions 'strftime' and 'strptime', which do