@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: internal.c,v 1.40.2.3 2008/09/02 21:12:59 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: internal.c,v 1.40.2.4 2008/09/25 19:50:57 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - internal.c */
@@ -1395,14 +1395,13 @@ f_strftime(union argument *arg)
     /* Remove trailing space */
     assert(buffer[length-1] == ' ');
     buffer[length-1] = NUL;
-    buffer = gp_realloc(buffer, strlen(buffer)+1, "f_strftime");
-    FPRINTF((stderr," strftime result = \"%s\"\n",buffer));
 
     gpfree_string(&val);
     gpfree_string(&fmt);
     free(fmtstr);
 
     push(Gstring(&val, buffer));
+    free(buffer);
 }
 
 /* Convert string into seconds from year 2000 */
